# cloud-sandbox

./: .eslintrc.js  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitmodules  README.md  docker-compose.yml  gatsby-browser.js  gatsby-config.js  gatsby-node.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/agents/: brokerpak.md  cicd-pipeline.md  cloud-sandbox-concept.md  cloud-sandbox.md  cloud-service-brokers.md  opentofu.md  oscal.md
.github/workflows/: sync-to-gitlab.yml
.husky/: pre-commit
content/: oscal_assessment-plan_schema.json  oscal_assessment-results_schema.json  oscal_component_schema.json  oscal_poam_schema.json  oscal_profile_schema.json  oscal_ssp_schema.json
docs/: README.md  architecture-diagrams.md  credential-provisioning.md  feature-requests.md  local-agent-workflows.md  open-questions.md  opencode-auth-configuration.md  operations-runbook.md  service-approval-extraction-summary.md  service-instance-credential-commands.md  troubleshooting.md  vscode-auth-configuration.md  zed-auth-configuration.md
docs/adr/: 0001-ai-access-families.md
docs/aws/: .aws-services-data.json  approved-service-conditions.md  (+6 more)
scripts/: azure-openai-preflight.sh  create-broker-db.sh  deploy-aws.sh  deploy-azure.sh  deploy-databricks.sh  deploy-gcp.sh  launch-opencode-broker-session.sh  local-agent-vcap.sh  patch_ssp.py  patch_ssp_controls.py  provision-azure-sp.sh  refresh-model-catalogs.sh  teardown-broker.sh  validate-opencode-broker-models.sh
static/: schema.json
tools/mcp/: README.md  pyproject.toml
(+50 files in other folders)
