[project]
name = "cloud-sandbox-mcp-tools"
version = "0.1.0"
description = "Local MCP workspace helpers for cloud-sandbox CSP integrations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "databricks-mcp>=0.9.0",
  "mcp>=1.13.0"
]

[dependency-groups]
dev = [
  "ruff>=0.11.0"
]

[tool.uv]
package = false